--- a/2022.07.04/index.html
+++ b/2022.07.04/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <section>
-    <a href="#" class="btn_03">Github</a>
+    <a href="#" class="btn_03">Email</a>
     </section>
 
     <div style="text-align: center">
