--- a/Happy-Birthday-Friend/index.html
+++ b/Happy-Birthday-Friend/index.html
@@ -10,7 +10,7 @@
 <body background="">
 
     <main>
-       <b>Happy Birthday Taka</b>  
+       <b>Forever Taka</b>  
     </main>
     <!--
         画像の描写
