--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="css/style.css">
     <script src="ButtonEvent.js"></script>
+    
+    <!--タブアイコンの描写-->
+     <link rel="icon" href="./Image/favicon.png">
+    
 </head>
 <body background="./Image/">
 
