--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
         <!--Header-->
         <header>
-            <h2 onclick="Menu()">Noten</h2>
+            <h2>Noten</h2>
             <nav>
               <ul class="nav_links">
-                <li><a>Home</a></li>
+                <li onclick="Menu()"><a>Home</a></li>
                 <li><a>Project</a></li>
                 <li><a>Profile</a></li>
                 <li><a>Contact</a></li>
