--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <!--Header-->
         <header>
-            <h2 onclick="Menu()">Noten</h2>
+            <h2>Noten</h2>
             <nav>
               <ul class="nav_links">
-                <li><a>Home</a></li>
+                <li><a onclick="Menu()">Home</a></li>
                 <li><a>Project</a></li>
                 <li><a>About</a></li>
               </ul>
