--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <h2>Noten</h2>
             <nav>
               <ul class="nav_links">
-                <li><a>Home</a></li>
-                <li><a>Project</a></li>
-                <li><a>About</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Project</a></li>
+                <li><a href="">About</a></li>
               </ul>
             </nav>
           </header>
