--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
         <!--GoogleフォントのAPI-->
         <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+        
         <!--サイトのアイコン設定-->
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="./favicon.ico">
 
     </head>
 
