--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <p>独学でDIYプログラミングを学習してる</p>
 
-            <hr>
+            <hr class="as">
 
             <br>
 
@@ -83,7 +83,7 @@
 
             <h3 class="ProjectTitle">Project</h3>
 
-            <hr class="bs">
+            <hr>
 
             <br>
             <br>
