--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
             <br>
 
-            <p>画像処理が大好きな情弱エンジニア</p>
+            <p>画像処理が好きな情弱エンジニア</p>
 
-            <p>独学でDIYプログラミングを学習してる</p>
+            <p>C#のDIYでソフトを作ってる</p>
 
             <hr class="as">
 
