--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <img onclick="Github()" href="" width="30px" height="28px" src="./assets/Github.png" alt="Github" oncontextmenu="return false;"　onselectstart="return false;" onmousedown="return false;"/>
             
-            <img onclick="Alert()" href="" width="30px" height="28px" src="./assets/Instagram.png" alt="Instagram" style="margin-left:20px;" oncontextmenu="return false;"　onselectstart="return false;" onmousedown="return false;"/>
+            <img onclick="Instagram()" href="" width="30px" height="28px" src="./assets/Instagram.png" alt="Instagram" style="margin-left:20px;" oncontextmenu="return false;"　onselectstart="return false;" onmousedown="return false;"/>
 
             <br>
 
